--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1,8 +1,27 @@
 {
-    "HEADER" : {
-        "HEADER_TITLE": "Hola soy",
-        "HEADER_NAME": "Erick González",
-        "HEADER_ABOUT": "Experiencia en el diseño y desarrollo de aplicaciones web, abarcando tanto el frontend como el backend, además de un sólido manejo de análisis de datos y bases de datos.",
-        "HEADER_BUTTON": "Acerca de mi"
-    }
+  "HEADER": {
+    "HEADER_TITLE": "Hola soy",
+    "HEADER_NAME": "Erick González",
+    "HEADER_ABOUT": "Experiencia en el diseño y desarrollo de aplicaciones web, abarcando tanto el frontend como el backend, además de un sólido manejo de análisis de datos y bases de datos.",
+    "HEADER_BUTTON": "Acerca de mi"
+  },
+  "ABOUTME": {
+    "ABOUT_TITLE": "Acerca de mí",
+    "ABOUT_ABOUT_DESCRIPTION": "Soy un desarrollador web especializado en la creación de aplicaciones completas desde el diseño de interfaces hasta la implementación de lógica en el servidor. Tengo experiencia en bases de datos y en el despliegue de aplicaciones, asegurando un rendimiento óptimo y una experiencia de usuario fluida. Además, domino el control de versiones a través de Git y utilizo Power BI para el análisis de datos, lo que me permite tomar decisiones informadas basadas en métricas.",
+    "ABOUT_EXPIRENCE": [
+      {
+        "EXPIRENCE": "Años",
+        "EXPIRENCE_ABOUT": "de experiencia"
+      },
+      {
+        "PROJECTS": "Proyectos",
+        "PROJECTS_ABOUT": "completados"
+      },
+      {
+        "WORKING": "Trabjando",
+        "WORKING_ABOUT": "en compañias"
+      }
+    ],
+    "ABOUT_DOWNLOAD_CV": "Descargar CV"
+  }
 }
