--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -24,15 +24,10 @@
     ],
     "ABOUT_DOWNLOAD_CV": "Descargar CV"
   },
-  "SKILLS": {
-    "SKILL_1": {
-      "TIME": "Más de 2 años",
-      "AREA": "Frontend",
-      "TITLE": "Lenguajes y tecnologías principales",
-      "IMAGES": [
-        "https://go-skill-icons.vercel.app/api/icons?i=html,css,javascript",
-        "https://go-skill-icons.vercel.app/api/icons?i=php,vite"
-      ]
-    }
+  "THEME": {
+    "BUTTON_LABEL": "Temas"
+  },
+  "LANGUAGES": {
+    "BUTTON_LABEL": "Idiomas"
   }
 }
