--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -24,10 +24,28 @@
     ],
     "ABOUT_DOWNLOAD_CV": "Descargar CV"
   },
+  "SKILLS": {
+    "SKILLS_TITLE": "Habilidades"
+  },
+  "PROJECTS": {
+    "PROJECTS_TITLE": "Proyectos"
+  },
+  "CONTACT": {
+    "CONTACT_TITLE": "Contacto"
+  },
+  "FOOTER": {
+    "FOOTER_MAKE": "Hecho con",
+    "FOOTER_SEPARATOR": "y",
+    "FOOTER_DESCRIPTION": "Proyecto desarrollado con Astro",
+    "FOOTER_ALL_RIGHT": "Todos los derechos reservados"
+  },
   "THEME": {
     "BUTTON_LABEL": "Temas"
   },
   "LANGUAGES": {
     "BUTTON_LABEL": "Idiomas"
+  },
+  "VERSION": {
+    "BUTTON_LABEL": "Version"
   }
 }
