fix: Se arregla el boton de ver proyectos y se separan tareas

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -28,7 +28,8 @@
     "SKILLS_TITLE": "Skills"
   },
   "PROJECTS": {
-    "PROJECTS_TITLE": "Projects"
+    "PROJECTS_TITLE": "Projects",
+    "PROJECTS_VIEW": "See project"
   },
   "CONTACT": {
     "CONTACT_TITLE": "Contact"
