fix: Se arregla el select de versiones, se mejora el navbar, se da soporte a idioma

--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -47,6 +47,7 @@
     "BUTTON_LABEL": "Idiomas"
   },
   "VERSION": {
-    "BUTTON_LABEL": "Version"
+    "BUTTON_LABEL": "Version",
+    "VERSION_CURRENT": "Actual"
   }
 }
