--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -47,6 +47,7 @@
     "BUTTON_LABEL": "Languages"
   },
   "VERSION": {
-    "BUTTON_LABEL": "Version"
+    "BUTTON_LABEL": "Version",
+    "VERSION_CURRENT": "Current"
   }
 }
