fix and feat: EL CV se manda a vista en vez de descarga

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,7 +22,7 @@
         "WORKING_ABOUT": "in companies"
       }
     ],
-    "ABOUT_DOWNLOAD_CV": "Download CV"
+    "ABOUT_DOWNLOAD_CV": "See CV"
   },
   "SKILLS": {
     "SKILLS_TITLE": "Skills"
