--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -22,7 +22,7 @@
           "WORKING_ABOUT": "dans des entreprises"
         }
       ],
-      "ABOUT_DOWNLOAD_CV": "Télécharger CV"
+      "ABOUT_DOWNLOAD_CV": "Voir CV"
     },
     "SKILLS": {
       "SKILLS_TITLE": "Compétences"
