fix: Se arregla el cv para poderlo descargar

--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -22,7 +22,7 @@
         "WORKING_ABOUT": "en compañías"
       }
     ],
-    "ABOUT_DOWNLOAD_CV": "Ver CV"
+    "ABOUT_DOWNLOAD_CV": "Descargar CV"
   },
   "SKILLS": {
     "SKILLS_TITLE": "Habilidades"
