feat: Se agrega soporte de lenguaje a el Modal de experiencia

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,7 +22,8 @@
         "WORKING_ABOUT": "in companies"
       }
     ],
-    "ABOUT_DOWNLOAD_CV": "See CV"
+    "ABOUT_DOWNLOAD_CV": "See CV",
+    "EXPERIENCE": "Experience"
   },
   "SKILLS": {
     "SKILLS_TITLE": "Skills"
