fix and feat: Se actualiza astro, se agrega mas soporte a idiomas,se empiza la estructura por rutas en vez de anclajes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -39,7 +39,8 @@
     "FOOTER_MAKE": "Make with",
     "FOOTER_SEPARATOR": "and",
     "FOOTER_DESCRIPTION": "Project developed with Astro",
-    "FOOTER_ALL_RIGHT": "All right reserved"
+    "FOOTER_ALL_RIGHT": "All right reserved",
+    "FOOTER_ECOLOGICAL_FOOTPRINT": "Ecological Footprint - Rating"
   },
   "THEME": {
     "BUTTON_LABEL": "Themes"
