feat: Se agrega parallax, falta agregar filtro para las tecnologias en tabs individuales

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,7 +3,7 @@
     "HEADER_TITLE": "Hello I'am",
     "HEADER_NAME": "Erick Gonzalez",
     "HEADER_ABOUT": "Experience in the design and development of web applications, covering both frontend and backend, as well as solid knowledge of data analysis and databases.",
-    "HEADER_BUTTON": "About me"
+    "HEADER_BUTTON": "See projects"
   },
   "ABOUTME": {
     "ABOUT_TITLE": "About me",
