--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -1,9 +1,9 @@
 {
   "HEADER": {
     "HEADER_TITLE": "Bonjour, je suis",
-    "HEADER_NAME": "Erick González",
+    "HEADER_NAME": "Érick González",
     "HEADER_ABOUT": "Expérience dans la conception et le développement d'applications web, englobant à la fois le frontend et le backend, ainsi qu'une solide maîtrise de l'analyse des données et des bases de données.",
-    "HEADER_BUTTON": "À propos de moi"
+    "HEADER_BUTTON": "Voir les projets"
   },
   "ABOUTME": {
     "ABOUT_TITLE": "À propos de moi",
