--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -3,7 +3,7 @@
     "HEADER_TITLE": "Hola soy",
     "HEADER_NAME": "Erick González",
     "HEADER_ABOUT": "Experiencia en el diseño y desarrollo de aplicaciones web, abarcando tanto el frontend como el backend, además de un sólido manejo de análisis de datos y bases de datos.",
-    "HEADER_BUTTON": "Ver proyectos"
+    "HEADER_BUTTON": "Ver habilidades"
   },
   "ABOUTME": {
     "ABOUT_TITLE": "Acerca de mí",
