--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -3,7 +3,7 @@
     "HEADER_TITLE": "Bonjour, je suis",
     "HEADER_NAME": "Érick González",
     "HEADER_ABOUT": "Expérience dans la conception et le développement d'applications web, englobant à la fois le frontend et le backend, ainsi qu'une solide maîtrise de l'analyse des données et des bases de données.",
-    "HEADER_BUTTON": "Voir les projets"
+    "HEADER_BUTTON": "Voir les compétences"
   },
   "ABOUTME": {
     "ABOUT_TITLE": "À propos de moi",
