--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,6 +1,6 @@
 {
   "HEADER": {
-    "HEADER_TITLE": "Hello I'am",
+    "HEADER_TITLE": "Hello there",
     "HEADER_NAME": "Erick Gonzalez",
     "HEADER_ABOUT": "Experience in the design and development of web applications, covering both frontend and backend, as well as solid knowledge of data analysis and databases.",
     "HEADER_BUTTON": "See skills"
