feat: Se arreglan bugs se limpia interfaz

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -35,7 +35,7 @@
   },
   "FOOTER": {
     "FOOTER_MAKE": "Designed and Built with",
-    "FOOTER_ECOLOGICAL_FOOTPRINT": "Ecological Footprint - Rating"
+    "FOOTER_ECOLOGICAL_FOOTPRINT": "🌱 This website is sustainable - Rating"
   },
   "THEME": {
     "BUTTON_LABEL": "Themes"
