--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -35,7 +35,7 @@
   },
   "FOOTER": {
     "FOOTER_MAKE": "Diseñado y Construido con",
-    "FOOTER_ECOLOGICAL_FOOTPRINT": "Huella Ecologica - Calificacion"
+    "FOOTER_ECOLOGICAL_FOOTPRINT": "🌱 Este sitio web es sostenible - Calificacion"
   },
   "THEME": {
     "BUTTON_LABEL": "Temas"
