--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -35,7 +35,7 @@
   },
   "FOOTER": {
     "FOOTER_MAKE": "Conçu et construit avec",
-    "FOOTER_ECOLOGICAL_FOOTPRINT": "Empreinte écologique - Évaluation"
+    "FOOTER_ECOLOGICAL_FOOTPRINT": "🌱 Ce site Web est durable - Évaluation"
   },
   "THEME": {
     "BUTTON_LABEL": "Thèmes"
