--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -1,9 +1,10 @@
 {
   "HEADER": {
     "HEADER_TITLE": "Bonjour",
+    "HEADER_SUBTITLE": "Développeur full-stack",
     "HEADER_NAME": "Érick González",
-    "HEADER_ABOUT": "Expérience dans la conception et le développement d'applications web, englobant à la fois le frontend et le backend, ainsi qu'une solide maîtrise de l'analyse des données et des bases de données.",
-    "HEADER_BUTTON": "Voir les compétences"
+    "HEADER_ABOUT": "Ingénieur diplômé en technologies de l'information, spécialisé dans le développement FullStack, l'analyse de données et les bases de données. Avec plus de deux ans d'expérience dans la création d'applications efficaces, évolutives et bien structurées.",
+    "HEADER_BUTTON": "Voir les projets"
   },
   "ABOUTME": {
     "ABOUT_TITLE": "À propos de moi",
