--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1,9 +1,10 @@
 {
   "HEADER": {
     "HEADER_TITLE": "Hola soy",
+    "HEADER_SUBTITLE": "Desarrollador Full-Stack",
     "HEADER_NAME": "Erick González",
-    "HEADER_ABOUT": "Experiencia en el diseño y desarrollo de aplicaciones web, abarcando tanto el frontend como el backend, además de un sólido manejo de análisis de datos y bases de datos.",
-    "HEADER_BUTTON": "Ver habilidades"
+    "HEADER_ABOUT": "Ingeniero en Tecnologías de la Información titulado, especializado en desarrollo FullStack, análisis de datos y bases de datos. Con más de dos años de experiencia creando aplicaciones eficientes, escalables y bien estructuradas.",
+    "HEADER_BUTTON": "Ver proyectos"
   },
   "ABOUTME": {
     "ABOUT_TITLE": "Acerca de mí",
