fix: Se mejora el home textos y descripciones

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -3,7 +3,7 @@
     "HEADER_TITLE": "Bonjour",
     "HEADER_SUBTITLE": "Développeur full-stack",
     "HEADER_NAME": "Érick González",
-    "HEADER_ABOUT": "Ingénieur diplômé en technologies de l'information, spécialisé dans le développement FullStack, l'analyse de données et les bases de données. Avec plus de deux ans d'expérience dans la création d'applications efficaces, évolutives et bien structurées.",
+    "HEADER_ABOUT": "Ingénieur diplômé en technologies de l'information, spécialisé dans le développement FullStack et l'analyse de données. Avec plus de deux ans d'expérience dans la création d'applications efficaces, évolutives et bien structurées.",
     "HEADER_BUTTON": "Voir les projets"
   },
   "ABOUTME": {
