--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,7 +3,7 @@
     "HEADER_TITLE": "Hello there",
     "HEADER_SUBTITLE": "Full-stack Developer",
     "HEADER_NAME": "Erick Gonzalez",
-    "HEADER_ABOUT": "Information Technology Engineer, specialized in FullStack development, data analysis and databases. With more than two years of experience creating efficient, scalable and well-structured applications.",
+    "HEADER_ABOUT": "Information Technology Engineer, specialized in FullStack development and data analysis. With more than two years of experience creating efficient, scalable and well-structured applications.",
     "HEADER_BUTTON": "See Projects"
   },
   "ABOUTME": {
