--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -3,7 +3,7 @@
     "HEADER_TITLE": "Hola soy",
     "HEADER_SUBTITLE": "Desarrollador Full-Stack",
     "HEADER_NAME": "Erick González",
-    "HEADER_ABOUT": "Ingeniero en Tecnologías de la Información titulado, especializado en desarrollo FullStack, análisis de datos y bases de datos. Con más de dos años de experiencia creando aplicaciones eficientes, escalables y bien estructuradas.",
+    "HEADER_ABOUT": "Ingeniero en Tecnologías de la Información titulado, especializado en desarrollo FullStack y análisis de datos. Con más de dos años de experiencia creando aplicaciones eficientes, escalables y bien estructuradas.",
     "HEADER_BUTTON": "Ver proyectos"
   },
   "ABOUTME": {
