--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -29,6 +29,9 @@
   "SKILLS": {
     "SKILLS_TITLE": "Habilidades"
   },
+  "EDUCATION": {
+    "EDUCATION_TITLE": "Educación"
+  },
   "PROJECTS": {
     "PROJECTS_TITLE": "Proyectos",
     "PROJECTS_VIEW": "Ver proyecto",
@@ -55,5 +58,10 @@
   },
   "404": {
     "404_BODY": "¡Ups! La página que estás buscando no existe."
+  },
+  "UNIVERSITY": {
+    "UNIVERSITY_TITLE": "Universidad Politécnica del Valle de México (UPVM)",
+    "UNIVERSITY_SUBTITLE": "Ingeniería en Tecnologías de la Información",
+    "UNIVERSITY_TEXT": "Durante mi tiempo en la universidad, aprendí sobre diversas áreas de TI, como mantenimiento de equipos, redes, programación orientada a objetos, desarrollo móvil con Xamarin, ciberseguridad, ingeniería de requisitos y bases de datos. También trabajé con Arduino en robótica. Sin embargo, lo que más me interesó fue el desarrollo web. Aunque solo aprendí conceptos básicos de jQuery, siempre tuve el deseo de seguir aprendiendo sobre este tema. Actualmente, soy autodidacta y me esfuerzo por aprender algo nuevo cada día."
   }
 }
