--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -29,6 +29,9 @@
   "SKILLS": {
     "SKILLS_TITLE": "Compétences"
   },
+  "EDUCATION": {
+    "EDUCATION_TITLE": "Éducation"
+  },
   "PROJECTS": {
     "PROJECTS_TITLE": "Projets",
     "PROJECTS_VIEW": "Voir le projet",
@@ -55,5 +58,10 @@
   },
   "404": {
     "404_BODY": "Oups ! La page que vous recherchez n'existe pas."
+  },
+  "UNIVERSITY": {
+    "UNIVERSITY_TITLE": "Université Polytechnique de la Vallée de Mexico (UPVM)",
+    "UNIVERSITY_SUBTITLE": "Ingénierie en Technologies de l'Information",
+    "UNIVERSITY_TEXT": "Au cours de mes études universitaires, j'ai découvert divers domaines de l'informatique, tels que la maintenance des équipements, la mise en réseau, la programmation orientée objet, le développement mobile avec Xamarin, la cybersécurité, l'ingénierie des exigences et les bases de données. J'ai également travaillé avec Arduino en robotique. Cependant, ce qui m'intéressait le plus était le développement web. Même si je n'ai appris que les bases de jQuery, j'ai toujours eu l'envie de continuer à apprendre sur ce sujet. Actuellement, je suis autodidacte et je m'efforce d'apprendre quelque chose de nouveau chaque jour."
   }
 }
