refactor: Se mejora el apartado proyectos

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -34,6 +34,7 @@
   },
   "PROJECTS": {
     "PROJECTS_TITLE": "Projects",
+    "PROJECTS_TITLE_BUSIN": "Business projects",
     "PROJECTS_VIEW": "See project",
     "PROJECTS_MODAL_TITLE": "Image gallery"
   },
