--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -34,6 +34,7 @@
   },
   "PROJECTS": {
     "PROJECTS_TITLE": "Proyectos",
+    "PROJECTS_TITLE_BUSIN": "Proyectos empresariales",
     "PROJECTS_VIEW": "Ver proyecto",
     "PROJECTS_MODAL_TITLE": "Galeria de imagenes"
   },
