--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -34,6 +34,7 @@
   },
   "PROJECTS": {
     "PROJECTS_TITLE": "Projets",
+    "PROJECTS_TITLE_BUSIN": "Projets d'entreprise",
     "PROJECTS_VIEW": "Voir le projet",
     "PROJECTS_MODAL_TITLE": "Galerie d'images"
   },
