--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -64,5 +64,20 @@
     "UNIVERSITY_TITLE": "Polytechnic University of the Valley of Mexico (UPVM)",
     "UNIVERSITY_SUBTITLE": "Information Technology Engineering",
     "UNIVERSITY_TEXT": "During my time at university, I learned about various areas of IT such as equipment maintenance, networking, object-oriented programming, mobile development with Xamarin, cybersecurity, requirements engineering, and databases. I also worked with Arduino in robotics. However, what interested me the most was web development. Although I only learned basic jQuery concepts, I always had the desire to continue learning about this topic. Currently, I am self-taught and strive to learn something new every day."
+  },
+  "FORM": {
+    "FORM_TITLE": "Contact",
+    "FORM_DESCRIPTION": "I am available for freelance work. Connect with me via email.",
+    "INPUT_NAME": "First Name",
+    "INPUT_LAST_NAME": "Last Name",
+    "INPUT_EMAIL": "Email",
+    "INPUT_PHONE": "Phone",
+    "INPUT_SERVICES": "Services",
+    "DEVELOPMENT_WEB": "Web Development",
+    "DEVELOPMENT_API": "API Development",
+    "CONSULT": "Consulting",
+    "INPUT_MORE_INFORMATION": "More Information",
+    "INPUT_MORE_INFORMATION_TEXT": "Write your message here",
+    "BUTTON_LABEL": "Send Message"
   }
 }
