--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -64,5 +64,20 @@
     "UNIVERSITY_TITLE": "Universidad Politécnica del Valle de México (UPVM)",
     "UNIVERSITY_SUBTITLE": "Ingeniería en Tecnologías de la Información",
     "UNIVERSITY_TEXT": "Durante mi tiempo en la universidad, aprendí sobre diversas áreas de TI, como mantenimiento de equipos, redes, programación orientada a objetos, desarrollo móvil con Xamarin, ciberseguridad, ingeniería de requisitos y bases de datos. También trabajé con Arduino en robótica. Sin embargo, lo que más me interesó fue el desarrollo web. Aunque solo aprendí conceptos básicos de jQuery, siempre tuve el deseo de seguir aprendiendo sobre este tema. Actualmente, soy autodidacta y me esfuerzo por aprender algo nuevo cada día."
+  },
+  "FORM": {
+    "FORM_TITLE": "Contacto",
+    "FORM_DESCRIPTION": "Estoy disponible para trabajos freelance. Conéctate conmigo a través del correo electrónico.",
+    "INPUT_NAME": "Nombre",
+    "INPUT_LAST_NAME": "Apellido",
+    "INPUT_EMAIL": "Correo electrónico",
+    "INPUT_PHONE": "Teléfono",
+    "INPUT_SERVICES": "Servicios",
+    "DEVELOPMENT_WEB": "Desarrollo web",
+    "DEVELOPMENT_API": "Desarrollo de API",
+    "CONSULT": "Consultoría",
+    "INPUT_MORE_INFORMATION": "Más información",
+    "INPUT_MORE_INFORMATION_TEXT": "Escribe tu mensaje aquí",
+    "BUTTON_LABEL": "Enviar mensaje"
   }
 }
