fix: Se cambia la parte de acerca de mi

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -24,6 +24,8 @@
       }
     ],
     "ABOUT_DOWNLOAD_CV": "See CV",
+    "ABOUT_TITLE_CARD": "Information Technology Engineer. Full-Stack Developer.",
+    "ABOUT_SUBTITLE": "Autonomous",
     "EXPERIENCE": "Experience"
   },
   "SKILLS": {
