--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -24,6 +24,8 @@
       }
     ],
     "ABOUT_DOWNLOAD_CV": "Ver CV",
+    "ABOUT_TITLE_CARD": "Ingeniero en Tecnologías de la Información. Desarrollador Full-Stack.",
+    "ABOUT_SUBTITLE": "Autonomo",
     "EXPERIENCE": "Experiencia"
   },
   "SKILLS": {
