--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -24,6 +24,8 @@
       }
     ],
     "ABOUT_DOWNLOAD_CV": "Voir cv",
+    "ABOUT_TITLE_CARD": "Ingénieur en technologies de l'information. Développeur Full-Stack.",
+    "ABOUT_SUBTITLE": "Autonome",
     "EXPERIENCE": "Expérience"
   },
   "SKILLS": {
