--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -81,8 +81,15 @@
     "INPUT_MORE_INFORMATION": "More Information",
     "INPUT_MORE_INFORMATION_TEXT": "Write your message here",
     "BUTTON_LABEL": "Send Message",
-    "FORM_VALID_INFORMATION": "This field is required",
-    "FORM_INVALID_EMAIL": "Invalid email format",
+    "FORM_VALID_NAME": "The name must be longer than 4 letters",
+    "FORM_VALID_LASTNAME": "The last name must be longer than 4 letters",
+    "FORM_VALID_EMAIL": "Invalid email format",
+    "FORM_VALID_PHONE_MIN": "The number must have at least 7 digits",
+    "FORM_VALID_PHONE_MAX": "The number is too long",
+    "FORM_VALID_PHONE_REGEX": "The number must contain only digits and valid symbols (+, -, spaces, parentheses)",
+    "FORM_VALID_MORE_INFORMATION_MIN": "The description must be longer than 7 characters",
+    "FORM_VALID_MORE_INFORMATION_MAX": "Character limit reached, only 260 characters allowed",
+
     "FORM_SEND_INFORMATION_CORRECT": "The information has been successfully sent!",
     "FORM_SEND_INFORMATION_INCORRECT": "There was an error sending the message"
   }
