--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -40,25 +40,6 @@
     "PROJECTS_VIEW": "Ver proyecto",
     "PROJECTS_MODAL_TITLE": "Galeria de imagenes"
   },
-  "FOOTER": {
-    "FOOTER_MAKE": "Diseñado y Construido con",
-    "FOOTER_ECOLOGICAL_FOOTPRINT": "🌱 Este sitio web es sostenible - Calificacion"
-  },
-  "THEME": {
-    "BUTTON_LABEL": "Temas"
-  },
-  "LANGUAGES": {
-    "BUTTON_LABEL": "Idiomas"
-  },
-  "VERSION": {
-    "BUTTON_LABEL": "Versión",
-    "VERSION_CURRENT": "Actual"
-  },
-  "TOAST": {
-    "TOAST_TITLE": "Version preliminar",
-    "TOAST_BODY": "La version 1.0.1 esta desplegada pero habran futuros cambios en los próximos meses",
-    "TOAST_BUTTON": "Aceptar"
-  },
   "404": {
     "404_BODY": "¡Ups! La página que estás buscando no existe."
   },
@@ -71,16 +52,20 @@
     "FORM_TITLE": "Contacto",
     "FORM_DESCRIPTION": "Estoy disponible para trabajos freelance. Conéctate conmigo a través de Telegram, se enviará a través de un ChatBot.",
     "INPUT_NAME": "Nombre",
-    "INPUT_LAST_NAME": "Apellido",
     "INPUT_EMAIL": "Correo electrónico",
     "INPUT_PHONE": "Teléfono",
-    "INPUT_SERVICES": "Servicios",
-    "DEVELOPMENT_WEB": "Desarrollo web",
-    "DEVELOPMENT_API": "Desarrollo de API",
-    "CONSULT": "Consultoría",
+
     "INPUT_MORE_INFORMATION": "Más información",
     "INPUT_MORE_INFORMATION_TEXT": "Escribe tu mensaje aquí",
     "BUTTON_LABEL": "Enviar mensaje",
+
+    "FORM_TITLE_SMALL_SUBHEADER": "ESTOY PARA LO QUE NECESITE Y PUEDE CONTACTARME",
+    "FORM_TITLE_HEAD_STRONG": "Hablemos",
+    "FORM_TITLE_HEAD_STRONG_SECOND": "de",
+    "FORM_TITLE_HEAD_STRONG_THRID": "sus necesidades en soluciones de sistemas",
+    "FORM_SUBTITLE_SUBHEAD": "¿Busca soluciones de sistemas de alta calidad adaptadas a sus necesidades? Contáctame.",
+    "FORM_OPTIONS_CONTACT_EMAIL": "Correo",
+    "FORM_OPTIONS_CONTACT_PHONE": "Teléfono",
 
     "FORM_VALID_NAME": "El nombre debe ser mayor a 4 letras",
     "FORM_VALID_LASTNAME": "El apellido debe ser mayor a 4 letras",
